--- a/Check Generator Aldrin].vbproj
+++ b/Check Generator Aldrin].vbproj
@@ -120,6 +120,9 @@
     <EmbeddedResource Include="Forms\_Code Settings.resx">
       <DependentUpon>_Code Settings.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\_Main Form.resx">
+      <DependentUpon>_Main Form.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
